syntax = "proto3";

package io.vg.srv.productStore;

import 'common.proto';
import 'google/protobuf/any.proto';
import "google/protobuf/timestamp.proto";
import 'google/protobuf/wrappers.proto';
import 'google/protobuf/struct.proto';

message ProductStore {
  // normal field
  string id = 1;
  google.protobuf.Timestamp createdAt = 2;
  google.protobuf.Timestamp updatedAt = 3;
  google.protobuf.Timestamp deletedAt = 4;
  google.protobuf.StringValue createdBy = 5;
  google.protobuf.StringValue updatedBy = 6;
  google.protobuf.StringValue deletedBy = 7;
  // reserved field
  string productId = 8;
  string storeId = 9;
}

message ProductStores {
  repeated ProductStore productStores = 1;
}

message ProductStoreEdge {
  ProductStores node = 1;
  string cursor = 2;
}

message ProductStoreConnection {
  common.PageInfo pageInfo = 1;
  int32 totalCount = 2;
  repeated ProductStoreEdge edges = 3;
}

message ProductStoreInput {
  string productId = 1;
  string storeId = 2;
}

message CreateProductStoreInput {
  ProductStoreInput data = 1;
}

message CreateManyProductStoresInput {
  repeated ProductStoreInput ProductStores = 1;
}

message UpdateProductStoreInput {
  string id = 1;
  ProductStoreInput data = 2;
}

message UpdateManyProductStoresInput {
  google.protobuf.Any filter = 1;
  ProductStoreInput update = 2;
}

message DeleteManyProductStoresInput {
  google.protobuf.Any filter = 1;
}

message NullableProductStore {
  oneof kind {
    google.protobuf.NullValue null = 1;
    ProductStore data = 2;
  }
}